# opcua-web

./: .cz.toml  .gitignore  CHANGELOG.md  Makefile  README.md
backend/: pyproject.toml
backend/src/opcua_web/: main.py  models.py  opcua_client.py
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  playwright.integration.config.ts  vite.config.ts
frontend/e2e/: chart.spec.ts  connection.spec.ts  fixtures.ts  full-workflow.integration.spec.ts  helpers.ts  monitoring.spec.ts  node-details.spec.ts  tree-browser.spec.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: ConnectionBar.tsx  NodePanel.tsx  SubscriptionPanel.tsx  TreeView.tsx  ValueChart.tsx
