[project]
name = "opcua-web"
version = "0.1.0"
description = "OPC UA Web Client - Browse, monitor, and chart OPC UA server data in real time"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "asyncua>=1.1.5",
    "websockets>=14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opcua_web"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version = "0.1.0"
update_changelog_on_bump = true
